fix: adjust scrollbar height for better visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,7 @@
   }
 
   .scrollbar::-webkit-scrollbar {
-    @apply w-1 lg:w-[7px];
+    @apply w-1 lg:w-[7px] h-1.5;
   }
 
   .scrollbar::-webkit-scrollbar-thumb {
